--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="login-left">
         <img src="background.jpg" alt="AGS">
         <div class="info">
-            <h1>Welcom to Vyapaar Connect</h1>
+            <h1>Welcom to my Vyapaar Connect</h1>
             <br>
             <p>Sign in to continue</p>
         </div>
